[gd_scene load_steps=3 format=3 uid="uid://dj8onv3vrewrt"]

[ext_resource type="Script" path="res://scenes/Lobby/lobby.gd" id="1_d03m5"]

[sub_resource type="GDScript" id="GDScript_pr823"]
script/source = "extends LineEdit


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[node name="Lobby" type="Node2D"]
script = ExtResource("1_d03m5")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Host" type="Button" parent="."]
offset_left = -394.0
offset_top = -254.0
offset_right = -124.0
offset_bottom = -49.0
text = "HOST"

[node name="Join" type="Button" parent="."]
offset_left = -92.0
offset_top = -252.0
offset_right = 178.0
offset_bottom = -47.0
text = "JOIN"

[node name="LobbyID" type="LineEdit" parent="."]
offset_left = -238.0
offset_top = 8.0
offset_right = -35.0
offset_bottom = 79.0
script = SubResource("GDScript_pr823")

[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
